<resources>

    <string name="app_name">Vamo de Bus!</string>
    <string name="app_short_name">VDB!</string>
    
    <string name="adpremium_noads_label_facebook">Facebook</string>
    <string name="adpremium_noads_label_twitter">Twitter</string>
    <string name="adpremium_noads_label_web">Web</string>
    
    <string name="adpremium_noads_link_facebook">www.facebook.com/vamodebus</string>
    <string name="adpremium_noads_link_twitter">www.twitter.com/vamodebus</string>
    <string name="adpremium_noads_link_web">www.vamodebus.com.br</string>
    
    <string name="search_list_lastused">Últimas Consultas:</string>
    
    <string name="code_of_route">Código da Linha: </string>
    <string name="find">Buscar</string>
    <string name="menu_about">Info</string>
    <string name="title_activity_main">Vamo de Bus!</string>
    <string name="not_found">Dados indisponíveis</string>
    <string name="rout_example">Ex:T131</string>
    <string name="info_text1">Este aplicativo foi desenvolvido por Eduardo Silva Rosa com intuito de auxiliar os usuários de onibus da cidade de Uberlandia. </string>
    <string name="info_text2">Para buscar a rota basta digitar o codigo da rota(ex: T131) ou parte do código (ex: T) e tocar no botão buscar.</string>
    <string name="info_text3"> Conforme a informação passada no campo de busca irá aparecer uma lista contendo as linhas de onibus com o código informado.</string>
    <string name="info_text4">Para visualizar a localização do onibus basta tocar sobre a linha desejada e aparecerá a lista com os pontos de onibus peretence a linha selecionada. As linhas descatada indicam a localização do onibus.</string>

</resources>