<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/logo_vamo_de_bus"
                android:layout_gravity="center_horizontal"
                android:padding="15dp"
                />

        <TextView
            android:id="@+id/text_about1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_text1"
        />

        <TextView
                android:id="@+id/text_about2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text2"
                />
        <TextView
                android:id="@+id/text_about3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text3"
                />
        <TextView
                android:id="@+id/text_about4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text4"
                />
    </LinearLayout>
</ScrollView>