<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		       
	    <android.widget.ImageView
	        android:id="@+id/logoApp"
	        android:src="@drawable/ic_launcher"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="10dp"/>
        
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		       
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="3dp"
		    android:background="@android:color/darker_gray"/>        
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/imgFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:padding="5dip" android:contentDescription="@string/adpremium_noads_link_facebook"/>
        
	    <LinearLayout
	            android:orientation="vertical"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
        
	        <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/adpremium_noads_label_facebook"
	                android:textStyle="bold"
	                android:layout_gravity="center_vertical"
	                android:textSize="14sp"
	                />
	        
	        <TextView
	            	android:id="@+id/linkFacebook"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/adpremium_noads_link_facebook"
	                android:layout_gravity="center_vertical"
	                android:textSize="16sp"
	                android:textStyle="italic"
	                />
	    </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imgTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter"
                android:padding="5dip"
                android:contentDescription="@string/adpremium_noads_link_twitter"/>

	    <LinearLayout
	            android:orientation="vertical"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
        
	        <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/adpremium_noads_label_twitter"
	                android:textStyle="bold"
	                android:layout_gravity="center_vertical"
	                android:textSize="14sp"
	                />
	        
	        <TextView
	            	android:id="@+id/linkTwitter"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/adpremium_noads_link_twitter"
	                android:layout_gravity="center_vertical"
	                android:textSize="16sp"
	                android:textStyle="italic"
	                />
	    </LinearLayout>

     </LinearLayout>

    <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imgWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/web"
                android:padding="5dip" android:contentDescription="@string/adpremium_noads_link_web"/>

	    <LinearLayout
	            android:orientation="vertical"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
        
	        <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/adpremium_noads_label_web"
	                android:textStyle="bold"
	                android:layout_gravity="center_vertical"
	                android:textSize="14sp"
	                />
	        
	        <TextView
	            	android:id="@+id/linkWeb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/adpremium_noads_link_web"
	                android:layout_gravity="center_vertical"
	                android:textSize="16sp"
	                android:textStyle="italic"
	                />
	    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30px"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/socialLoadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
	    		       
    </LinearLayout>
    
</LinearLayout>